@@ -5,6 +5,7 @@ PHP                                                                        NEWS
 - Core:
   . Fixed bug #76427 (Segfault in zend_objects_store_put). (Laruence)
   . Fixed bug #76422 (ftruncate fails on files > 2GB). (Anatol)
+  . The == and != operators have been deprecated.
 
 - Date:
   . Fixed bug #76462 (Undefined property: DateInterval::$f). (Anatol)
